--- a/pages/about-event.html
+++ b/pages/about-event.html
@@ -35,7 +35,7 @@
 
       <!-- Event Image -->
       <div>
-        <img src="https://via.placeholder.com/500x300" alt="Web Development Workshop">
+        <img src="../assets/marina.jpg" alt="Web Development Workshop">
         <p class="location">📍 Location: Chennai, Tamil Nadu</p>
       </div>
 
