--- a/pages/admin.html
+++ b/pages/admin.html
@@ -200,7 +200,8 @@
                             <button class="action-btn delete-btn"><i class="fas fa-trash-alt"></i> Delete</button>
                         </div>
                     </div>
-                    <button class="action-btn add-btn"><i class="fas fa-plus-circle"></i> Add New Event</button>
+                    <a href="add-event.html" class="action-btn add-btn" style="text-decoration: none; display: flex;"><i
+                            class="fas fa-plus-circle"></i> Add New Event</a>
                 </div>
             </div>
 
@@ -238,7 +239,7 @@
         </main>
     </div>
 
-    
+
 </body>
 
 </html>
