--- a/pages/events.html
+++ b/pages/events.html
@@ -79,7 +79,7 @@
             <div class="event-detail-item">18 Nov 2025</div>
             <div class="event-detail-item time">6:30 AM - 9:30 AM</div>
           </div>
-          <a href="./about-event.html"><span class="event-status status-upcoming">Click to join</span></a>
+          <a href="./signup.html"><span class="event-status status-upcoming">Click to join</span></a>
         </div>
       </div>
 
