--- a/pages/login.html
+++ b/pages/login.html
@@ -49,6 +49,9 @@
                 <p class="form-footer">
                     Don't have an account? <a href="./signup.html">Register as Volunteer</a>
                 </p>
+                <p class="form-footer">
+                    sign in as admin? <a href="./admin.html">Register as Admin</a>
+                </p>
             </form>
         </div>
     </section>
