--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>EcoClean Awareness</title>
-  <link rel="stylesheet" href="./styles/style.css" />
+  <link rel="stylesheet" href="./styles/home.css" />
   <link rel="icon" href="./assets/sustainability.png">
 </head>
 
@@ -107,22 +107,6 @@
       </div>
     </div>
   </section>
-
-
-  <!-- <section id="contact">
-      <h2>Contact Us</h2> -->
-  <!-- <div class="container contact">
-        <form>
-          <input type="text" placeholder="Your Name" required />
-          <input type="email" placeholder="Your Email" required />
-          <textarea placeholder="Your Message" rows="5" required></textarea>
-          <button onclick="alert('Thanks for contact us')" type="submit"  >Send Message</button>
-          
-
-        </form>
-      </div> -->
-
-  <!-- </section> -->
 
   <footer>
     <div class="container">
