--- a/pages/about-event.html
+++ b/pages/about-event.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Web Development Workshop</title>
 
-  <link rel="stylesheet" href="../styles/style.css" />
   <link rel="stylesheet" href="../styles/about-event.css" />
 </head>
 
@@ -43,8 +42,8 @@
       <div class="event-details">
         <h2>Web Development Workshop</h2>
 
-        <p class="info">📅 Date: 25 Feb 2026</p>
-        <p class="info">⏰ Time: 10:00 AM – 4:00 PM</p>
+        <p class="info"> Date: 25 Feb 2026</p>
+        <p class="info"> Time: 10:00 AM – 4:00 PM</p>
 
         <p>
           This Web Development Workshop is a beginner-friendly event focused on
