--- a/pages/signup.html
+++ b/pages/signup.html
@@ -7,8 +7,7 @@
     <title>Sign Up - EcoClean</title>
 
     <!-- Existing Styles (DO NOT CHANGE) -->
-    <link rel="stylesheet" href="../styles/style.css" />
-    <link rel="stylesheet" href="../styles/login.css" />
+    <link rel="stylesheet" href="../styles/signup.css" />
     <link rel="icon" href="../assets/sustainability.png" />
 </head>
 
@@ -41,20 +40,17 @@
 
                 <div class="form-group">
                     <label for="fullname">Full Name</label>
-                    <input type="text" id="fullname" name="fullname" required
-                        placeholder="Enter your full name" />
+                    <input type="text" id="fullname" name="fullname" required placeholder="Enter your full name" />
                 </div>
 
                 <div class="form-group">
                     <label for="email">Email Address</label>
-                    <input type="email" id="email" name="email" required
-                        placeholder="your.email@example.com" />
+                    <input type="email" id="email" name="email" required placeholder="your.email@example.com" />
                 </div>
 
                 <div class="form-group">
                     <label for="phone">Phone Number</label>
-                    <input type="tel" id="phone" name="phone" required
-                        placeholder="+91 98765 43210" />
+                    <input type="tel" id="phone" name="phone" required placeholder="+91 98765 43210" />
                 </div>
 
                 <div class="form-group">
@@ -141,4 +137,5 @@
     </footer>
 
 </body>
+
 </html>
